hoàn thiện login

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
     <div class="container-menu-header">
         <div class="topbar">
             <div class="topbar-social">
-                <a href="#" class="topbar-social-item fa fa-facebook"></a>
-                <a href="#" class="topbar-social-item fa fa-instagram"></a>
-                <a href="#" class="topbar-social-item fa fa-youtube-play"></a>
+                <a href="https://www.facebook.com/cafetrasuathayphuong/" class="topbar-social-item fa fa-facebook"></a>
+                <a href="https://www.foody.vn/ha-noi/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-instagram"></a>
+                <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-youtube-play"></a>
             </div>
 
             <span class="topbar-child1"> </span>
@@ -144,7 +144,7 @@
                           </li>
                         -->
                         <li>
-                            <a href="#Category">Category</a>
+                            <a href='/search?tag=Fiction'>Category</a>
                             <ul class="sub_menu">
                                 <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                                 <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -202,7 +202,7 @@
                 <li class="item-menu-mobile"><a href="index.html">Home</a></li>
                 <li class="item-menu-mobile"><a href="search.html">Search</a></li>
                 <li class="item-menu-mobile">
-                    <a>Category</a>
+                    <a href='/search?tag=Fiction'>Category</a>
                     <ul class="sub-menu">
                         <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                         <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -249,7 +249,7 @@
                             class="caption2-slide1 xl-text1 t-center animated visible-false m-b-37"
                             data-appear="fadeInUp"
                     >
-                        New arrivals
+                        Fiction
                     </h2>
 
                     <div
@@ -258,7 +258,7 @@
                     >
                         <!-- Button -->
                         <a
-                                href="product.html"
+                                href= '/search?tag=Fiction'
                                 class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4"
                         >
                             Detail
@@ -269,7 +269,7 @@
 
             <div
                     class="item-slick1 item2-slick1"
-                    style="background-image: url(images/mybanner/newbanner7.jpg);"
+                    style="background-image: url(images/citeafun2.jpg);"
             >
                 <div
                         class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170"
@@ -278,14 +278,14 @@
                       class="caption1-slide1 m-text1 t-center animated visible-false m-b-15"
                       data-appear="rollIn"
               >
-                Book Collection 2018
+                Sponsor
               </span>
 
                     <h2
                             class="caption2-slide1 xl-text1 t-center animated visible-false m-b-35"
                             data-appear="lightSpeedIn"
                     >
-                        Manga
+                        BOOK CAFE
                     </h2>
 
                     <div
@@ -294,10 +294,10 @@
                     >
                         <!-- Button -->
                         <a
-                                href="product.html"
+                                href='https://www.facebook.com/cafetrasuathayphuong/'
                                 class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4"
                         >
-                            Detail
+                            Visit
                         </a>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
 
             <div
                     class="item-slick1 item3-slick1"
-                    style="background-image: url(images/mybanner/newbanner9.jpg);"
+                    style="background-image: url(images/mybanner/newbanner7.jpg);"
             >
                 <div
                         class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170"
@@ -321,7 +321,7 @@
                             class="caption2-slide1 xl-text1 t-center animated visible-false m-b-37"
                             data-appear="rotateInUpRight"
                     >
-                        Novel
+                        Manga
                     </h2>
 
                     <div
@@ -330,7 +330,7 @@
                     >
                         <!-- Button -->
                         <a
-                                href="product.html"
+                                href='/search?tag=Manga'
                                 class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4"
                         >
                             Detail
@@ -424,13 +424,13 @@
                         </h4>
 
                         <p class="t-center w-size4">
-                            Trinh thám,pháp luật,...
+                            Trinh thám,Tình cảm,...
                         </p>
 
                         <div class="w-size2 p-t-25">
                             <!-- Button -->
                             <a
-                                    href='/search?tag=Tình cảm'
+                                    href='/search?tag=Trinh Thám'
                                     class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4"
                             >
                                 Xem thêm
@@ -465,8 +465,8 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail1"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail1
+                                            flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -476,8 +476,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail1"
                             >
                                 <div id="recommendName1">book name</div>
                             </a>
@@ -500,8 +499,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail2"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail2 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -511,8 +509,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail2"
                             >
                                 <div id="recommendName2">book name</div>
                             </a>
@@ -534,8 +531,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail3"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail3 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -545,8 +541,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail3"
                             >
                                 <div id="recommendName3">book name</div>
                             </a>
@@ -568,8 +563,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail4"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail4 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -579,8 +573,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail4"
                             >
                                 <div id="recommendName4">book name</div>
                             </a>
@@ -602,8 +595,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail5"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail5 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -613,8 +605,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail5"
                             >
                                 <div id="recommendName5">book name</div>
                             </a>
@@ -636,8 +627,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail6"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail6 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -647,8 +637,8 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail6"
                             >
                                 <div id="recommendName6">book name</div>
                             </a>
@@ -670,8 +660,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail7"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail7 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -681,8 +670,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail7"
                             >
                                 <div id="recommendName7">book name</div>
                             </a>
@@ -704,8 +692,7 @@
 
                                 <div class="block2-btn-addcart w-size1 trans-0-4">
                                     <!-- Button -->
-                                    <button id="recommendDetail8"
-                                            class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
+                                    <button class="recommendDetail8 flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4"
                                     >
                                         Detail
                                     </button>
@@ -715,8 +702,7 @@
 
                         <div class="block2-txt p-t-20">
                             <a
-                                    href="product-detail.html"
-                                    class="block2-name dis-block s-text3 p-b-5"
+                                    class="block2-name dis-block s-text3 p-b-5 recommendDetail8"
                             >
                                 <div id="recommendName8">book name</div>
                             </a>
@@ -734,7 +720,7 @@
 
 
 
-<footer class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
+<footer class="bg6 p-t-45 p-b-43 p-l-80 ">
     <div class="flex-w p-b-90">
         <div class="w-size6 p-t-30 p-l-15 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">GET IN TOUCH</h4>
@@ -745,8 +731,8 @@
                 </p>
 
                 <div class="flex-m p-t-30">
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
+                    <a href="https://www.facebook.com/cafetrasuathayphuong/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
+                    <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
                 </div>
             </div>
         </div>
@@ -755,42 +741,34 @@
             <h4 class="s-text12 p-b-30">Categories</h4>
 
             <ul>
-                <li class="p-b-9"><a href="#" class="s-text7"> Manga </a></li>
+                <li class="p-b-9"><a href='/search?tag=manga' class="s-text7"> Manga </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Văn Học </a></li>
+                <li class="p-b-9"><a href='/search?tag=Fiction' class="s-text7"> Fiction </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Tiểu Thuyết </a></li>
+                <li class="p-b-9"><a href='/search?tag=tiểu thuyết' class="s-text7"> Novel</a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Ngoại Văn </a></li>
+                <li class="p-b-9"><a href='/search?tag=văn học nước ngoài' class="s-text7"> Foreign Book </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Others </a></li>
+                <li class="p-b-9"><a href='/search?tag=Fiction' class="s-text7"> Others </a></li>
             </ul>
         </div>
 
-        <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
+
+
+
+        <div class="w-size7 p-t-30 p-l-75 p-r-15 respon4">
             <h4 class="s-text12 p-b-30">Links</h4>
 
             <ul>
-                <li class="p-b-9"><a href="#" class="s-text7"> Search </a></li>
+                <li class="p-b-9"><a href="search.html" class="s-text7"> Search </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> About Us </a></li>
+                <li class="p-b-9"><a href="about.html" class="s-text7"> About Us </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Returns </a></li>
             </ul>
         </div>
 
-        <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-            <h4 class="s-text12 p-b-30">Help</h4>
 
-            <ul>
-
-                <li class="p-b-9"><a href="#" class="s-text7"> Support </a></li>
-
-                <li class="p-b-9"><a href="#" class="s-text7"> FAQs </a></li>
-            </ul>
-        </div>
-
-        <div class="w-size8 p-t-30 p-l-15 p-r-15 respon3">
+        <div class="w-size8 p-t-30 p-l-150 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">Newsletter</h4>
 
             <form>
@@ -887,8 +865,7 @@
         src="vendor/sweetalert/sweetalert.min.js"
 ></script>
 
-  ===============================================================================================
--->
+
 <script src="js/main.js"></script>
 <script src="./dev-js/recommendloader.js"></script>
 
