--- a/search.html
+++ b/search.html
@@ -112,9 +112,9 @@
     <div class="container-menu-header">
         <div class="topbar">
             <div class="topbar-social">
-                <a href="#" class="topbar-social-item fa fa-facebook"></a>
-                <a href="#" class="topbar-social-item fa fa-instagram"></a>
-                <a href="#" class="topbar-social-item fa fa-youtube-play"></a>
+                <a href="https://www.facebook.com/cafetrasuathayphuong/" class="topbar-social-item fa fa-facebook"></a>
+                <a href="https://www.foody.vn/ha-noi/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-instagram"></a>
+                <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-youtube-play"></a>
             </div>
 
             <span class="topbar-child1"> </span>
@@ -144,7 +144,7 @@
                           </li>
                         -->
                         <li>
-                            <a href="#Category">Category</a>
+                            <a href='/search?tag=Fiction'>Category</a>
                             <ul class="sub_menu">
                                 <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                                 <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -202,7 +202,7 @@
                 <li class="item-menu-mobile"><a href="index.html">Home</a></li>
                 <li class="item-menu-mobile"><a href="search.html">Search</a></li>
                 <li class="item-menu-mobile">
-                    <a>Category</a>
+                    <a href='/search?tag=Fiction'>Category</a>
                     <ul class="sub-menu">
                         <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                         <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -268,27 +268,26 @@
                                 <!--Tiểu thuyết-->
                             <!--</a>-->
                         <!--</li>-->
+
+                        <li class="p-t-4">
+                            <a href='/search?tag=thiếu nhi' class="s-text13">
+                                Kids
+                            </a>
+                        </li>
                         <li class="p-t-4">
                             <a href='/search?tag=tiểu thuyết' class="s-text13">
                                 Novel
                             </a>
                         </li>
+
+                        <li class="p-t-4">
+                            <a href='/search?tag=Manga' class="s-text13">
+                                Manga
+                            </a>
+                        </li>
                         <li class="p-t-4">
                             <a href='/search?tag=Fiction' class="s-text13">
                                 Fiction
-                            </a>
-                        </li>
-
-                        <li class="p-t-4">
-                            <a href='/search?tag=văn học nước ngoài' class="s-text13">
-                                Foreign Book
-                            </a>
-                        </li>
-
-
-                        <li class="p-t-4">
-                            <a href='/search?tag=thiếu nhi' class="s-text13">
-                                Kids
                             </a>
                         </li>
 
@@ -299,9 +298,10 @@
                         </li>
 
                         <li class="p-t-4">
-                            <a href='/search?tag=truyện ngắn' class="s-text13">
-                                Short Story
+                            <a href='/search?tag=văn học trong nước' class="s-text13">
+                                Literature
                             </a>
+
                         </li>
 
                         <li class="p-t-4">
@@ -311,8 +311,15 @@
                         </li>
 
                         <li class="p-t-4">
-                            <a href='/search?tag=văn học trong nước' class="s-text13">
-                                Literature
+                            <a href='/search?tag=truyện ngắn' class="s-text13">
+                                Short Story
+                            </a>
+                        </li>
+
+
+                        <li class="p-t-4">
+                            <a href='/search?tag=văn học nước ngoài' class="s-text13">
+                                Foreign Book
                             </a>
                         </li>
 
@@ -749,7 +756,7 @@
 
 
 
-<footer class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
+<footer class="bg6 p-t-45 p-b-43 p-l-80 ">
     <div class="flex-w p-b-90">
         <div class="w-size6 p-t-30 p-l-15 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">GET IN TOUCH</h4>
@@ -760,11 +767,8 @@
                 </p>
 
                 <div class="flex-m p-t-30">
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-pinterest-p"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-snapchat-ghost"></a>
-                    <a href="#" class="fs-18 color1 p-r-20 fa fa-youtube-play"></a>
+                    <a href="https://www.facebook.com/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
+                    <a href="https://www.instagram.com/junvu95/" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
                 </div>
             </div>
         </div>
@@ -773,44 +777,34 @@
             <h4 class="s-text12 p-b-30">Categories</h4>
 
             <ul>
-                <li class="p-b-9"><a href="#" class="s-text7"> Manga </a></li>
+                <li class="p-b-9"><a href='/search?tag=manga' class="s-text7"> Manga </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Văn Học </a></li>
+                <li class="p-b-9"><a href='/search?tag=Fiction' class="s-text7"> Fiction </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Tiểu Thuyết </a></li>
+                <li class="p-b-9"><a href='/search?tag=tiểu thuyết' class="s-text7"> Novel</a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Ngoại Văn </a></li>
+                <li class="p-b-9"><a href='/search?tag=văn học nước ngoài' class="s-text7"> Foreign Book </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Others </a></li>
+                <li class="p-b-9"><a href='/search?tag=Fiction' class="s-text7"> Others </a></li>
             </ul>
         </div>
 
-        <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
+
+
+
+        <div class="w-size7 p-t-30 p-l-75 p-r-15 respon4">
             <h4 class="s-text12 p-b-30">Links</h4>
 
             <ul>
-                <li class="p-b-9"><a href="#" class="s-text7"> Search </a></li>
+                <li class="p-b-9"><a href="search.html" class="s-text7"> Search </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> About Us </a></li>
+                <li class="p-b-9"><a href="about.html" class="s-text7"> About Us </a></li>
 
-                <li class="p-b-9"><a href="#" class="s-text7"> Contact Us </a></li>
-
-                <li class="p-b-9"><a href="#" class="s-text7"> Returns </a></li>
             </ul>
         </div>
 
-        <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-            <h4 class="s-text12 p-b-30">Help</h4>
 
-            <ul>
-
-                <li class="p-b-9"><a href="#" class="s-text7"> Support </a></li>
-
-                <li class="p-b-9"><a href="#" class="s-text7"> FAQs </a></li>
-            </ul>
-        </div>
-
-        <div class="w-size8 p-t-30 p-l-15 p-r-15 respon3">
+        <div class="w-size8 p-t-30 p-l-150 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">Newsletter</h4>
 
             <form>
@@ -836,45 +830,6 @@
         </div>
     </div>
 
-    <!-- <div class="t-center p-l-15 p-r-15">
-      <a href="#">
-        <img class="h-size2" src="images/icons/paypal.png" alt="IMG-PAYPAL" />
-      </a>
-
-      <a href="#">
-        <img class="h-size2" src="images/icons/visa.png" alt="IMG-VISA" />
-      </a>
-
-      <a href="#">
-        <img
-          class="h-size2"
-          src="images/icons/mastercard.png"
-          alt="IMG-MASTERCARD"
-        />
-      </a>
-
-      <a href="#">
-        <img
-          class="h-size2"
-          src="images/icons/express.png"
-          alt="IMG-EXPRESS"
-        />
-      </a>
-
-      <a href="#">
-        <img
-          class="h-size2"
-          src="images/icons/discover.png"
-          alt="IMG-DISCOVER"
-        />
-      </a>
-
-      <div class="t-center s-text8 p-t-20">
-        Copyright © 2018 All rights reserved. | This template is made with
-        <i class="fa fa-heart-o" aria-hidden="true"></i> by
-        <a href="https://colorlib.com" target="_blank">Colorlib</a>
-      </div>
-    </div> -->
 </footer>
 
 <!-- Back to top -->
