hoàn thiện login

--- a/bookdetail.html
+++ b/bookdetail.html
@@ -112,9 +112,9 @@
     <div class="container-menu-header">
         <div class="topbar">
             <div class="topbar-social">
-                <a href="#" class="topbar-social-item fa fa-facebook"></a>
-                <a href="#" class="topbar-social-item fa fa-instagram"></a>
-                <a href="#" class="topbar-social-item fa fa-youtube-play"></a>
+                <a href="https://www.facebook.com/cafetrasuathayphuong/" class="topbar-social-item fa fa-facebook"></a>
+                <a href="https://www.foody.vn/ha-noi/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-instagram"></a>
+                <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="topbar-social-item fa fa-youtube-play"></a>
             </div>
 
             <span class="topbar-child1"> </span>
@@ -144,7 +144,7 @@
                           </li>
                         -->
                         <li>
-                            <a href="#Category">Category</a>
+                            <a href='/search?tag=Fiction'>Category</a>
                             <ul class="sub_menu">
                                 <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                                 <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -202,7 +202,7 @@
                 <li class="item-menu-mobile"><a href="index.html">Home</a></li>
                 <li class="item-menu-mobile"><a href="search.html">Search</a></li>
                 <li class="item-menu-mobile">
-                    <a>Category</a>
+                    <a href='/search?tag=Fiction'>Category</a>
                     <ul class="sub-menu">
                         <li><a href='/search?tag=tiểu thuyết'>Novel</a></li>
                         <li><a href='/search?tag=Fiction'>Fiction </a></li>
@@ -418,9 +418,10 @@
                     Any questions?<br> Let us know in HEDSPI Library - HUST <br>or call us on (+84) 0842299904
                 </p>
 
+
                 <div class="flex-m p-t-30">
-                    <a href="https://www.facebook.com/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/junvu95/" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
+                    <a href="https://www.facebook.com/cafetrasuathayphuong/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
+                    <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
                 </div>
             </div>
         </div>
