--- a/search.html
+++ b/search.html
@@ -766,9 +766,10 @@
                     Any questions?<br> Let us know in HEDSPI Library - HUST <br>or call us on (+84) 0842299904
                 </p>
 
+
                 <div class="flex-m p-t-30">
-                    <a href="https://www.facebook.com/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/junvu95/" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
+                    <a href="https://www.facebook.com/cafetrasuathayphuong/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
+                    <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
                 </div>
             </div>
         </div>
