--- a/about.html
+++ b/about.html
@@ -385,9 +385,10 @@
                     Any questions?<br> Let us know in HEDSPI Library - HUST <br>or call us on (+84) 0842299904
                 </p>
 
+
                 <div class="flex-m p-t-30">
-                    <a href="https://www.facebook.com/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
-                    <a href="https://www.instagram.com/junvu95/" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
+                    <a href="https://www.facebook.com/cafetrasuathayphuong/" class="fs-18 color1 p-r-20 fa fa-facebook"></a>
+                    <a href="https://www.now.vn/HA-NOI/citea-fun-tea-coffee-ta-quang-buu" class="fs-18 color1 p-r-20 fa fa-instagram"></a>
                 </div>
             </div>
         </div>
@@ -520,8 +521,6 @@
         src="vendor/sweetalert/sweetalert.min.js"
 ></script>
 
-===============================================================================================
--->
 <script src="js/main.js"></script>
 <script src="./dev-js/recommendloader.js"></script>
 
